<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/Firstname"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textViewLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Lastname"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textViewsalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Salary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/buttonEditEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/edit"
            android:background="@color/colorWhite"
            android:src="@mipmap/edit"/>

        <ImageButton
            android:id="@+id/buttonDeleteEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/delete"
            android:background="@color/colorWhite"
            android:src="@mipmap/delete"/>

    </LinearLayout>

</LinearLayout>